@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.otaku" name="Otaku" provider-name="TeamOtaku" version="0.3.9">
+<addon id="plugin.video.otaku" name="Otaku" provider-name="TeamOtaku" version="0.3.10">
   <requires>
     <!-- <import addon="xbmc.python" version="2.24.0"/> -->
     <import addon="script.module.beautifulsoup4" version="4.5.3" />
@@ -24,14 +24,8 @@
       <fanart>fanart.jpg</fanart>
     </assets>
     <news>
-Changelog 0.3.9 [20230202]:
-- Added New Setting "Preffed Source" for Preferences
-- Added New Setting "Set Delay in Seconds Before Showing Dialog" for Skip Intro Dialog
-- Removed "Seperate Subs and Dubs" 
-- Removed "Set content types"
-- Removed "Hide Dub/Sub"
-- Removed "Season Correction" 
-- Removed "Find Similar" 
+Changelog 0.3.10 [20230202]:
+- Added New Setting "Timeout for finding sources" for General Playback
     </news>
   </extension>
 </addon>
