@@ -1,3 +1,6 @@
+Changelog 0.3.10 [20230202]:
+- Added New Setting "Timeout for finding sources" for General Playback
+
 Changelog 0.3.9 [20230202]:
 - Added New Setting "Preffed Source" for Preferences
 - Added New Setting "Set Delay in Seconds Before Showing Dialog" for Skip Intro Dialog
